# AI-Voice-Controlled-Coding-Agent

./: .coverage  .env.example  .gitignore  README.md
.github/: copilot-instructions.md
backend/: pyproject.toml  requirements.txt
backend/src/: config.py  logging_setup.py  main.py
backend/src/adapters/: base.py  local.py  local_fs.py  vscode.py
backend/src/agent/: __init__.py  agent.py  coder.py  context_loader.py  intent_router.py  models.py  orchestrator.py  planner.py  router.py  session_memory.py  state_manager.py  structured_agent.py  structured_protocol.py  tool_executor.py
backend/src/api/: messages.py  websocket.py
backend/src/audio/: buffer.py  processor.py  recorder.py  transcriber.py  tts.py  vad.py
backend/src/tools/: __init__.py  file_ops.py  vscode_ctx.py
backend/tests/: conftest.py  test_agent_integration.py  test_agent_state.py  test_audio.py  test_e2e_websocket.py  test_live_server.py  test_orchestrator.py  test_structured_logic.py  test_tools.py  test_vscode_adapter.py  test_websocket.py
docs/: agent_llm_schema.md  agent_workflow.md
extension/: .eslintrc.json  .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/src/: backendManager.ts  chatViewProvider.ts  extension.ts  venvManager.ts
extension/src/test/suite/: extension.test.ts
extension/src/webview/: App.tsx
extension/src/webview/services/: audioRecorder.ts  websocket.ts
extension/src/webview/styles/: main.css
scripts/: debug_client.py
tests/: test_integration_llm.py  test_smoke_imports.py
